# grit

./: Cargo.toml
source/: config.json  example.txt
src/: config.rs  file_handling.rs  lib.rs  main.rs  plumbing.rs  utils.rs
